# oop-college-3rd-course

./: .gitignore  CMakeLists.txt  README.md
LaboratoryWork1/: LaboratoryWork1.md
LaboratoryWork1/Task1/: Task1.cpp
LaboratoryWork1/Task1.1/: Task1.1.cpp
LaboratoryWork1/Task1.2/: Task1.2.cpp
LaboratoryWork1/Task2/: Task2.cpp
LaboratoryWork2/: LaboratoryWork2.md
LaboratoryWork2/Task1/: Task1.cpp
LaboratoryWork2/Task2/: Task2.cpp
LaboratoryWork2/Task2.1/: Task2.1.cpp
LaboratoryWork2/Task2.2/: Task2.2.cpp
LaboratoryWork2/Task2.4/: Task2.4.cpp
LaboratoryWork2/Task3/: Task3.cpp
LaboratoryWork3/: LaboratoryWork3.md
LaboratoryWork3/Task1/: Task1.cpp
LaboratoryWork3/Task2/: Task2.cpp
LaboratoryWork3/Task3/: Task3.cpp
LaboratoryWork3/Task3.1/: Task3.1.cpp
LaboratoryWork3/Task3.2/: Task3.2.cpp
LaboratoryWork3/Task3.4/: Task3.4.cpp
LaboratoryWork3/Task4/: Task4.cpp
LaboratoryWork3/Task5/: Task5.cpp
LaboratoryWork4/: LaboratoryWork4.md
LaboratoryWork4/Task5/: Task5.cpp
LaboratoryWork4/Task6/: Task6.cpp
LaboratoryWork4/Task7/: Task7.cpp
LaboratoryWork5/: LaboratoryWork5.md
LaboratoryWork5/Task1/: Task1.cpp
LaboratoryWork5/Task2/: Task2.cpp
LaboratoryWork5/Task3/: Task3.cpp
LaboratoryWork6/Task1/: Task1.cpp
LaboratoryWork6/Task2/: Task2.cpp
LaboratoryWork7/: LaboratoryWok7.md
docs/: index.md
laboratory-works/: CMakeLists.txt
laboratory-works/laboratory-work1/: CMakeLists.txt
laboratory-works/laboratory-work1/task1/: CMakeLists.txt  Main.cpp
laboratory-works/laboratory-work1/task2/: Main.cpp
laboratory-works/laboratory-work2/: CMakeLists.txt  README.md
laboratory-works/laboratory-work2/Task2/: Task2.cpp
laboratory-works/laboratory-work2/task1/: Main.cpp
laboratory-works/laboratory-work2/task2/: CMakeLists.txt  Main.cpp
laboratory-works/laboratory-work2/task3/: CMakeLists.txt  Main.cpp
laboratory-works/laboratory-work2/task4/: CMakeLists.txt  Main.cpp
laboratory-works/laboratory-work3/: CMakeLists.txt  README.md
laboratory-works/laboratory-work3/task1/: Main.cpp
laboratory-works/laboratory-work8/: CMakeLists.txt  README.md
laboratory-works/laboratory-work8/task/: CMakeLists.txt  Main.cpp
temp/: CMakeLists.txt
(+20 files in other folders)
