# Add sub directories
add_subdirectory(laboratory-work1)
add_subdirectory(laboratory-work2)
#add_subdirectory(laboratory-work3)
#add_subdirectory(laboratory-work4)
#add_subdirectory(laboratory-work5)
#add_subdirectory(laboratory-work6)
#add_subdirectory(laboratory-work7)
#add_subdirectory(laboratory-work8)